--- a/src/components/Timer/styles.css
+++ b/src/components/Timer/styles.css
@@ -5,7 +5,8 @@
   gap: 30px;
 }
 .set-timer section button {
-  color: var(--color)
+  color: var(--color);
+  transition: .3s;
 }
 .set-timer .numbers {
   display: flex;
@@ -15,9 +16,21 @@
 .set-timer .play {
   color: #fff;
   background: var(--primary-color);
-  padding: 15px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
+  transition: .3s;
+  transform: scale(0.3);
+  visibility: hidden;
+  opacity: 0;
 }
+
+.active-play {
+  transform: scale(1) !important;
+  visibility: visible !important;
+  opacity: 1 !important;
+} 
+
 
 .set-timer .numbers button {
   display: inline-block;
