--- a/src/components/Timer/Counter/styles.module.css
+++ b/src/components/Timer/Counter/styles.module.css
@@ -8,7 +8,36 @@
   background: var(--background);
   animation: fadeIn .3s reverse backwards;
   z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+.circle {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  border: 5px solid var(--color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.circle span {
+  color: var(--body);
+  font-weight: 600;
+  display: inline-block;
+  margin-bottom: .5rem;
+}
+
+.circle strong {
+  font-size: 4rem;
+  font-weight: 500;
+  letter-spacing: .5rem;
+  color: var(--primary-color)
+}
+
 
 .open {
   animation: fadeIn .3s forwards;
