--- a/src/screen/Timer/styles.module.css
+++ b/src/screen/Timer/styles.module.css
@@ -38,27 +38,28 @@
 }
 
 .play {
-  position: relative;
   color: #fff;
   background: var(--primary-color);
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  position: relative;
+}
+
+.inactive {
   animation: scaleOut both .3s;
-  margin: 0 auto;
-  z-index: 20;
 }
 
 @keyframes scaleOut {
   from {
     transform: scale(1);
     opacity: 1;
+    z-index: 20;
   }
 
   to {
     transform: scale(.5);
     opacity: 0;
+    z-index: 10;
   }
 } 
 
@@ -71,10 +72,12 @@
   from {
     transform: scale(.5);
     opacity: 0;
+    z-index: 10;
   }
   to {
     transform: scale(1);
     opacity: 1;
+    z-index: 20;
   }
 }
 
