--- a/src/screen/Timer/styles.module.css
+++ b/src/screen/Timer/styles.module.css
@@ -37,6 +37,25 @@
   flex-basis: 100%;
 }
 
+.button-field {
+  width: 100%;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+}
+.button-field button {
+  position: absolute;
+  color: var(--color);
+  font-size: 1rem;
+}
+.button-field button:nth-child(2) {
+  left: 3rem
+}
+.button-field button:nth-child(4) {
+  right: 1rem
+}
 .play {
   color: #fff;
   background: var(--primary-color);
